<resources>
    <string name="app_name">Quikr Cars Hub</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="title_activity_car_detail">Quikr Car Detail</string>
    <string name="title_activity_splash">Welcome to Quikr Cars Hub</string>
    <string name="fa_car">&#xf1b9;</string>
    <string name="fa_car_count">&#xf1b9; Count</string>
    <string name="fa_sort">&#xf160; Sort</string>
    <string name="fa_home">&#xf015;</string>
    <string name="fa_portfolio">&#xf0ac;</string>
    <string name="fa_star">&#xf005;</string>
    <string name="fa_rupee">&#xf156;</string>
    <string name="fa_link">&#xf08e;</string>
    <string name="fa_share">&#xf1e0;</string>
    <string name="fa_message">&#xf0e0;</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_portfolio">PortfolioActivity</string>




</resources>
