<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:quikr="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.quikr.partho.quikrchallenge.CarDetailActivity">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:minHeight="200dp">

            <!-- Top Section-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4.5">

                    <com.android.volley.toolbox.NetworkImageView
                        android:id="@+id/quikr_car_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:minHeight="150dp"
                        android:scaleType="fitStart"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5.5"
                    android:padding="5dp"
                    android:orientation="vertical">

                    <!--color,rating,price-->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="9">

                        <!--color-->

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2.5"
                            android:orientation="horizontal">

                            <android.support.v7.widget.CardView
                                android:id="@+id/quikr_car_color"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:textSize="20sp"
                                quikr:cardElevation="4dp"
                                />


                        </LinearLayout>


                        <!--rating-->

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:orientation="horizontal">

                            <com.quikr.partho.quikrchallenge.utils.ui.CustomTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                quikr:fontName="fa.ttf"
                                android:textSize="20sp"
                                android:textColor="@color/quikr_ratings_yellow"
                                android:text="@string/fa_star"
                                />

                            <TextView
                                android:id="@+id/quikr_car_rating"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="2.5"
                                android:layout_marginLeft="5dp"
                                android:textStyle="bold"
                                android:textSize="17sp"
                                />

                        </LinearLayout>


                        <!--pricing-->

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="4"
                            android:orientation="horizontal">

                            <com.quikr.partho.quikrchallenge.utils.ui.CustomTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                quikr:fontName="fa.ttf"
                                android:textSize="20sp"
                                android:text="@string/fa_rupee"
                                />

                            <TextView
                                android:id="@+id/quikr_car_price"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="2.5 L"
                                android:layout_marginLeft="5dp"
                                android:textStyle="bold"
                                android:textSize="17sp"
                                />

                        </LinearLayout>

                    </LinearLayout>





                </LinearLayout>

            </LinearLayout>

            <!--cc,abs,type,mileage-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/quikr_bg_light_blue"
                android:weightSum="12">

                <!--cc-->

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="CC"
                        android:textColor="@android:color/white"
                        android:gravity="center"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/quikr_car_cc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:text="2.5"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:textSize="17sp"
                        />

                </LinearLayout>

                <!--abs-->

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="ABS"
                        android:textColor="@android:color/white"
                        android:gravity="center"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/quikr_car_abs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:text="yes"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:textSize="17sp"
                        />

                </LinearLayout>


                <!--type-->

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="Type"
                        android:textColor="@android:color/white"
                        android:gravity="center"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/quikr_car_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Coupe"
                        android:textColor="@android:color/white"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:textSize="17sp"
                        />

                </LinearLayout>

                <!--mileage-->

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@android:color/white"
                        android:text="Mileage"
                        android:gravity="center"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/quikr_car_mileage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:text="1200kmps"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:textSize="17sp"
                        />

                </LinearLayout>



            </LinearLayout>

            <!-- Description-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    >

                    <TextView
                        android:id="@+id/quikr_car_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="50"
                        android:singleLine="false"
                        android:text="Description"
                        android:layout_marginLeft="5dp"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:padding="5dp"
                        />



                </android.support.v7.widget.CardView>

            </LinearLayout>

            <!-- Description-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="City/Car User Demographic"
                        android:gravity="center"
                        android:textColor="@color/quikr_bg_light_blue"
                        android:layout_marginLeft="5dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:padding="5dp"
                        />



                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/quikr_pie"
                    android:layout_width="200dp"
                    android:layout_height="200dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="9">

                <com.quikr.partho.quikrchallenge.utils.ui.CustomTextView
                    android:id="@+id/quikr_car_share"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    quikr:fontName="fa.ttf"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:text="@string/fa_share"/>

                <com.quikr.partho.quikrchallenge.utils.ui.CustomTextView
                    android:id="@+id/quikr_car_link"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    quikr:fontName="fa.ttf"
                    android:textSize="20sp"
                    android:layout_height="wrap_content"
                    android:text="@string/fa_link"/>

                <com.quikr.partho.quikrchallenge.utils.ui.CustomTextView
                    android:id="@+id/quikr_car_sms"
                    quikr:fontName="fa.ttf"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:text="@string/fa_message"/>





            </LinearLayout>



        </LinearLayout>


    </ScrollView>

</LinearLayout>
